correct overflow bug in chrome

--- a/demo/public/css/time-line.css
+++ b/demo/public/css/time-line.css
@@ -1,27 +1,34 @@
 .time-line {
   width: 900px;
-  margin-top: 100px;
 }
 
 .drag-left, .drag-right {
   width: 30px;
-  height: 20px;
+  height: 115px;
   float: left;
   cursor: pointer;
   display: block;
 }
 .drag-left {
-  background: url(../image/time-line/left-btn.png) no-repeat 50% 50%;
+  background: url(../image/time-line/left-btn.png) no-repeat 50% 20px;
 }
 .drag-right {
-  background: url(../image/time-line/right-btn.png) no-repeat 50% 50%;
+  background: url(../image/time-line/right-btn.png) no-repeat 50% 20px;
 }
 
 .time-line-box {
   float: left;
   width: 840px;
-  background: url(../image/time-line/line.png) repeat-x 50% 50%;
-  overflow-y: visible;
+  height: 115px;
+  background: url(../image/time-line/line.png) repeat-x 50% 22px;
+  position: relative;
+  overflow: hidden;
+}
+.time-line-inner {
+  width: 10000px;
+  position: absolute;
+  top: 20px;
+  left: 0;
 }
 
 .time-line-item {
@@ -33,7 +40,7 @@
   float: left;
 }
 .time-line-first {
-  margin-left: 60px;
+  margin-left: 50px;
 }
 .time-line-location {
   background: #ffffff url(../image/time-line/location.png) no-repeat 50% 50%;
@@ -43,9 +50,9 @@
 
 .time-line-name {
   position: absolute;
-  width: 120px;
+  width: 160px;
   top: -20px;
-  left: -51px;
+  left: -71px;
   text-align: center;
 }
 
@@ -86,7 +93,7 @@
 
 .time-line-add {
   background: none;
-  width: 120px;
+  width: 160px;
   height: 20px;
   float: left;
   position: relative;
@@ -99,7 +106,7 @@
   height: 75px;
   position: absolute;
   top: 20px;
-  left: 49px;
+  left: 69px;
   display: none;
 }
 
